--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-loader": "^13.7.3"
+    "vue-loader": "^13.7.3",
+    "vue-router": "^3.0.2"
   },
   "browserslist": [
     "> 1%",
